add {{ content }} tag to default layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,7 @@
 
    <td id="main">
 <!-- begin content -->
+{{ content }}
 <!-- end content -->
  <div id="footer">Deze site draait op vrije software. Dank aan al wie dat heeft mogelijk gemaakt.</div>
    </td>
