update header, add contact page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,9 +15,9 @@
 </head><body>
 
  <div id="header">  <h1 class="site-name title"><a href="/">TelePoesis.org</a></h1></div>
- <div class="navlinks"><ul class="links" id="navlist"><li class="menu-122 first"><a href="/node/1" title="Welkom bij TelePoesis.org">welkom</a></li>
-<li class="menu-134"><a href="/node/16" title="Mini-dichtbundeltje dat in je portefeuille past, in een wip gemaakt uit één A4-blad. Geen nietjes nodig!">dichtbundeltje</a></li>
-<li class="menu-135 last"><a href="/node/18" title="contact">contact</a></li>
+ <div class="navlinks"><ul class="links" id="navlist"><li class="menu-122 first"><a href="/index.html" title="Welkom bij TelePoesis.org">welkom</a></li>
+<li class="menu-134"><a href="/dichtbundeltje.html" title="Mini-dichtbundeltje dat in je portefeuille past, in een wip gemaakt uit één A4-blad. Geen nietjes nodig!">dichtbundeltje</a></li>
+<li class="menu-135 last"><a href="/contact.html" title="contact">contact</a></li>
 </ul> </div>
  <table id="content">
   <tr>
