--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,15 +3,14 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link rel="alternate" type="application/rss+xml" title="TelePoesis.org RSS" href="http://telepoesis.org/rss.xml" />
  <title>TelePoesis.org | Schoonheid die bijt</title>
-<link type="text/css" rel="stylesheet" media="all" href="/css/node.css" />
-<link type="text/css" rel="stylesheet" media="all" href="/css//defaults.css" />
-<link type="text/css" rel="stylesheet" media="all" href="/css/system.css" />
-<link type="text/css" rel="stylesheet" media="all" href="/css/system-menus.css" />
-<link type="text/css" rel="stylesheet" media="all" href="/css/user.css" />
-<link type="text/css" rel="stylesheet" media="all" href="/css/style.css" />
-<link type="text/css" rel="stylesheet" media="all" href="/css/common.css" />
+<link type="text/css" rel="stylesheet" media="all" href="css/node.css" />
+<link type="text/css" rel="stylesheet" media="all" href="css//defaults.css" />
+<link type="text/css" rel="stylesheet" media="all" href="css/system.css" />
+<link type="text/css" rel="stylesheet" media="all" href="css/system-menus.css" />
+<link type="text/css" rel="stylesheet" media="all" href="css/user.css" />
+<link type="text/css" rel="stylesheet" media="all" href="css/style.css" />
+<link type="text/css" rel="stylesheet" media="all" href="css/common.css" />
 </head><body>
 
  <div id="header">  <h1 class="site-name title"><a href="/">TelePoesis.org</a></h1></div>
